fix: overflow issue

--- a/frontend/src/app/page.module.sass
+++ b/frontend/src/app/page.module.sass
@@ -162,6 +162,7 @@
   flex-wrap: nowrap
   gap: .5rem
   overflow-x: auto
+  overflow-y: visible
   scrollbar-width: none
   -ms-overflow-style: none
   &::-webkit-scrollbar
